Fixed issue with footer and overflowing content

--- a/src/app/main-nav/main-nav.component.scss
+++ b/src/app/main-nav/main-nav.component.scss
@@ -1,5 +1,6 @@
 .sidenav-container {
   height: 100%;
+  padding-bottom: 40px;
 }
 
 .sidenav {
